Fix horizontal scrolling on mobile

--- a/client/src/app/dom-image/dom-image.component.scss
+++ b/client/src/app/dom-image/dom-image.component.scss
@@ -1,5 +1,19 @@
+:host {
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+}
+
 .container {
-	opacity: 0;
 	position: absolute;
+	opacity: 0;
 	pointer-events: none;
+	overflow: hidden;
+}
+
+img {
+	// display: none;
+	display: block;
+	margin: auto;
+	max-width: 100%;
 }
