--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -15,6 +15,7 @@ body {
     width: 100%;
     padding: 10px;
     max-width: 1050px;
+    box-sizing: border-box;
 }
 
 blockquote {
